# stm32-zephyr-lua

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.overlay  gptp.cfg  prj.conf  t.lua
src/: main.c
